// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Structured Data HowTo Structured Data converts steps into expected structured data format 1`] = `
HowToSd {
  "@context": "https://schema.org",
  "@type": "HowTo",
  "image": "https://webimages.mongodb.com/_com_assets/cms/kuyj2focmkbxv7gh3-stacked_default_slate_blue.svg?auto=format%252Ccompress",
  "name": undefined,
  "steps": [
    {
      "@type": "HowToStep",
      "name": "In Atlas, go to your federated database instance for your project.",
      "text": "If it's not already displayed, select the
organization that contains your project from the
 Organizations menu in the navigation bar.If it's not already displayed, select your project
from the Projects menu in the navigation bar.In the sidebar, click Data Federation under
the Services heading.The Data Federation page displays.",
    },
    {
      "@type": "HowToStep",
      "name": "Click Create Federated Database Instance.",
      "text": "If you have an existing federated database instance, instead click
Create Federated Database in the
top right corner of the dashboard.",
    },
    {
      "@type": "HowToSection",
      "itemListElement": [
        {
          "@type": "HowToStep",
          "name": "Rename the default collection.",
          "text": "Click  next to the default collection
VirtualCollection0 to edit its name. For this tutorial,
rename your collection Sessions.",
        },
        {
          "@type": "HowToStep",
          "name": "Create a second collection.",
          "text": "Click  next to the default name
VirtualDatabase0 to add a collection to the database.
For this tutorial, name your new collection Users.",
        },
        {
          "@type": "HowToStep",
          "name": "Add data to your virtual database.",
          "text": "Drag and drop the following data sources into the
respective federated database instance virtual collections:/mflix/sessions.json, into the Sessions
collection, and/mflix/users.json into the Users collection.",
        },
      ],
      "name": "Connect to a Data Source and add sample data to your federated database instance.",
    },
    {
      "@type": "HowToStep",
      "name": "Click Save.",
      "text": "Your federated database instance appears on the Data Federation page.",
    },
  ],
}
`;

exports[`Structured Data SoftwareSourceCode returns valid structured data with programmingLanguage 1`] = `
SoftwareSourceCodeSd {
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeSampleType": "code snippet",
  "programmingLanguage": "Python",
  "text": "print("hello world")",
}
`;

exports[`Structured Data SoftwareSourceCode returns valid structured data without programmingLangauge 1`] = `
SoftwareSourceCodeSd {
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeSampleType": "code snippet",
  "text": "print("hello world")",
}
`;

exports[`Structured Data SoftwareSourceCode sanitizes and escapes unsafe HTML examples 1`] = `
SoftwareSourceCodeSd {
  "@context": "https://schema.org",
  "@type": "SoftwareSourceCode",
  "codeSampleType": "code snippet",
  "text": " &lt;script&gt;&lt;/script&gt;  &lt;script&gt; const app = new Realm.App({ id: "&lt;your_realm_app_id&gt;", }); // Callback used in \`data-callback\` to handle Google's response and log user into App Services function handleCredentialsResponse(response) { const credentials = Realm.Credentials.google({ idToken: response.credential }); app .logIn(credentials) .then((user) =&gt; alert(\`Logged in with id: user.id\`)); } &lt;/script&gt;",
}
`;

exports[`Structured Data VideoObject returns valid structured data with description 1`] = `
VideoObjectSd {
  "@context": "https://schema.org",
  "@type": "VideoObject",
  "description": "Learn more about indexes in Atlas Search",
  "embedUrl": "https://www.youtube.com/embed/XrJG994YxD8",
  "name": "Mastering Indexing for Perfect Query Matching",
  "thumbnailUrl": "https://i.ytimg.com/vi/XrJG994YxD8/maxresdefault.jpg",
  "uploadDate": "2023-11-08T05:00:28-08:00",
}
`;

exports[`Structured Data VideoObject returns valid structured data without description 1`] = `
VideoObjectSd {
  "@context": "https://schema.org",
  "@type": "VideoObject",
  "embedUrl": "https://www.youtube.com/embed/XrJG994YxD8",
  "name": "Mastering Indexing for Perfect Query Matching",
  "thumbnailUrl": "https://i.ytimg.com/vi/XrJG994YxD8/maxresdefault.jpg",
  "uploadDate": "2023-11-08T05:00:28-08:00",
}
`;
